[workspace]
members = [
    "crates/*",
    "server"
]

resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
as-any = "0.3"
async-trait = "0.1"
byteorder = "1"
bytes = "1"
percent-encoding = "2"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
http = "1.2.0"
hyper = "1"
tower = "0.5.2"
hyper-util = "0.1.10"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
base64 = "0.22.1"
error = { path = "crates/error" }
socks5_protocol = { path = "crates/socks5_protocol"}
http_impl = { path = "crates/http_impl" }
socks5_client = { path = "crates/socks5_client" }
socks5_server = { path = "crates/socks5_server" }
serde_json = "1.0.140"
fn_macro = "0.1.4"
socks5_http = { path = "crates/socks5_http" }
