[package]
name = "http_impl"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = "0.1.85"
tokio.workspace = true
error.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util.workspace = true
axum.workspace = true
tracing.workspace = true
base64.workspace = true