[package]
name = "socks5_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
as-any.workspace = true
socks5_protocol.workspace = true
tokio = { workspace = true, features = ["full"] }
error.workspace = true
bytes.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"]}